[gd_scene load_steps=16 format=3 uid="uid://d3ky8ukpolq71"]

[ext_resource type="Script" uid="uid://b2ul4f18eay8w" path="res://code stuff/Main/map.gd" id="1_sf8pw"]
[ext_resource type="Texture2D" uid="uid://bh6ttx44rfnr" path="res://UI STUFF/Map/Map.png" id="2_2gdqd"]
[ext_resource type="Texture2D" uid="uid://4l87rjl21tgb" path="res://UI STUFF/Map/Alleyway.png" id="2_e6f88"]
[ext_resource type="Texture2D" uid="uid://brdqodgu0j4cl" path="res://UI STUFF/Map/Sqauloon.png" id="2_xwqx4"]
[ext_resource type="Texture2D" uid="uid://drnt7331xso6q" path="res://UI STUFF/Map/Kelp man cove.png" id="3_tl1cw"]
[ext_resource type="Texture2D" uid="uid://ctlovq7o77ga7" path="res://UI STUFF/Map/Sea horse stable.png" id="4_dfyxv"]
[ext_resource type="Texture2D" uid="uid://dde8o8ar2io3r" path="res://UI STUFF/Map/Wild south.png" id="4_vu6xu"]
[ext_resource type="Texture2D" uid="uid://dlkw8oai6v03v" path="res://UI STUFF/Map/Trash heap.png" id="5_bylcg"]
[ext_resource type="Texture2D" uid="uid://dt618screxi4g" path="res://UI STUFF/Map/Open plains.png" id="6_k322q"]
[ext_resource type="Texture2D" uid="uid://d1qyrfmf8nugg" path="res://UI STUFF/Map/Mine feild.png" id="9_bylcg"]
[ext_resource type="Texture2D" uid="uid://cn8i03g0bmn7o" path="res://UI STUFF/Map/Diving spot.png" id="9_fq7xl"]
[ext_resource type="Texture2D" uid="uid://ck6lb6mqv78hm" path="res://UI STUFF/Map/Aincent tomb.png" id="10_l2w2x"]
[ext_resource type="FontFile" uid="uid://bm5o7wdxohasl" path="res://Other/Tiny5-Regular.ttf" id="13_ly4nq"]
[ext_resource type="Shader" uid="uid://dikse5fp3siql" path="res://Other/underwater.gdshader" id="13_w7nl6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ly4nq"]
shader = ExtResource("13_w7nl6")
shader_parameter/wave_amplitude = 0.002
shader_parameter/wave_frequency = 7.875
shader_parameter/wave_speed = 1.0
shader_parameter/tint_color = Color(0, 0.282353, 0.72549, 0.0392157)

[node name="Map" type="Node2D"]
script = ExtResource("1_sf8pw")

[node name="Map" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(10, 10)
texture = ExtResource("2_2gdqd")

[node name="Kelp_man_cove" type="TextureButton" parent="."]
offset_left = 240.0
offset_top = 625.0
offset_right = 265.0
offset_bottom = 634.0
scale = Vector2(10, 10)
texture_normal = ExtResource("3_tl1cw")
texture_pressed = ExtResource("3_tl1cw")
texture_hover = ExtResource("3_tl1cw")
texture_disabled = ExtResource("3_tl1cw")
texture_focused = ExtResource("3_tl1cw")

[node name="wild_south" type="TextureButton" parent="."]
offset_left = 560.0
offset_top = 475.0
offset_right = 577.0
offset_bottom = 491.0
scale = Vector2(10, 10)
texture_normal = ExtResource("4_vu6xu")
texture_pressed = ExtResource("4_vu6xu")
texture_hover = ExtResource("4_vu6xu")
texture_disabled = ExtResource("4_vu6xu")
texture_focused = ExtResource("4_vu6xu")

[node name="trash_heap" type="TextureButton" parent="."]
offset_left = 30.0
offset_top = 85.0
offset_right = 59.0
offset_bottom = 101.0
scale = Vector2(10, 10)
texture_normal = ExtResource("5_bylcg")

[node name="sea_horse_stable" type="TextureButton" parent="."]
offset_left = 760.0
offset_top = 615.0
offset_right = 785.0
offset_bottom = 624.0
scale = Vector2(10, 10)
texture_normal = ExtResource("4_dfyxv")
texture_pressed = ExtResource("4_dfyxv")
texture_hover = ExtResource("4_dfyxv")
texture_disabled = ExtResource("4_dfyxv")
texture_focused = ExtResource("4_dfyxv")

[node name="alleyway" type="TextureButton" parent="."]
offset_left = 220.0
offset_top = 315.0
offset_right = 246.0
offset_bottom = 332.0
scale = Vector2(10, 10)
texture_normal = ExtResource("2_e6f88")
texture_pressed = ExtResource("2_e6f88")
texture_hover = ExtResource("2_e6f88")
texture_disabled = ExtResource("2_e6f88")
texture_focused = ExtResource("2_e6f88")

[node name="open_plains" type="TextureButton" parent="."]
offset_left = 690.0
offset_top = 225.0
offset_right = 707.0
offset_bottom = 241.0
scale = Vector2(10, 10)
texture_normal = ExtResource("6_k322q")
texture_pressed = ExtResource("6_k322q")
texture_hover = ExtResource("6_k322q")
texture_disabled = ExtResource("6_k322q")
texture_focused = ExtResource("6_k322q")

[node name="diving_spot" type="TextureButton" parent="."]
offset_left = 890.0
offset_top = 395.0
offset_right = 907.0
offset_bottom = 411.0
scale = Vector2(10, 10)
texture_normal = ExtResource("9_fq7xl")
texture_pressed = ExtResource("9_fq7xl")
texture_hover = ExtResource("9_fq7xl")
texture_disabled = ExtResource("9_fq7xl")
texture_focused = ExtResource("9_fq7xl")

[node name="ancient_tomb" type="TextureButton" parent="."]
offset_left = 770.0
offset_top = 55.0
offset_right = 820.0
offset_bottom = 86.0
scale = Vector2(10, 10)
texture_normal = ExtResource("10_l2w2x")

[node name="sqauloon" type="TextureButton" parent="."]
offset_left = 250.0
offset_top = 345.0
offset_right = 273.0
offset_bottom = 359.0
scale = Vector2(10, 10)
texture_normal = ExtResource("2_xwqx4")
texture_pressed = ExtResource("2_xwqx4")
texture_hover = ExtResource("2_xwqx4")
texture_disabled = ExtResource("2_xwqx4")
texture_focused = ExtResource("2_xwqx4")

[node name="mine_field" type="TextureButton" parent="."]
offset_left = 430.0
offset_top = 95.0
offset_right = 447.0
offset_bottom = 111.0
scale = Vector2(10, 10)
texture_normal = ExtResource("9_bylcg")
texture_pressed = ExtResource("9_bylcg")
texture_hover = ExtResource("9_bylcg")
texture_disabled = ExtResource("9_bylcg")
texture_focused = ExtResource("9_bylcg")

[node name="Label" type="Label" parent="."]
offset_top = -8.0
offset_right = 160.0
offset_bottom = 2.0
scale = Vector2(8, 8)
theme_override_colors/font_color = Color(0.921569, 0.996078, 1, 1)
theme_override_fonts/font = ExtResource("13_ly4nq")
theme_override_font_sizes/font_size = 8
text = "FISHY-FISHY MAP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ly4nq")
offset_left = 8.99994
offset_top = -17.0
offset_right = 137.0
offset_bottom = 42.0
scale = Vector2(10, 12.52)
mouse_filter = 2

[connection signal="pressed" from="Kelp_man_cove" to="." method="_on_kelp_man_pressed"]
[connection signal="pressed" from="wild_south" to="." method="_on_wild_south_pressed"]
[connection signal="pressed" from="trash_heap" to="." method="_on_trash_heap_pressed"]
[connection signal="pressed" from="sea_horse_stable" to="." method="_on_sea_horse_stable_pressed"]
[connection signal="pressed" from="alleyway" to="." method="_on_alleyway_pressed"]
[connection signal="pressed" from="open_plains" to="." method="_on_open_plains_pressed"]
[connection signal="pressed" from="diving_spot" to="." method="_on_diving_spot_pressed"]
[connection signal="pressed" from="ancient_tomb" to="." method="_on_ancient_tomb_pressed"]
[connection signal="pressed" from="sqauloon" to="." method="_on_bar_pressed"]
[connection signal="pressed" from="mine_field" to="." method="_on_mine_feild_pressed"]
